added alternative host for thumbs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="thumb_switcher.js"></script>
 
-<img class="thumb_switcher" src="images/game.jpg" data-thumb-switch-speed="1000">
+<img class="thumb_switcher" src="images/game.jpg" data-thumb-switch-speed="1000" data-thumb-host="http://agame.com/images">
 
 <img class="thumb_switcher" src="images/game.jpg" data-thumb-switch-speed="100">
 
